ver 0.22.11 (not yet released)
* protocol
  - fix "albumart" crash
* filter
  - ffmpeg: pass "channel_layout" instead of "channels" to buffersrc
  - ffmpeg: fix "av_buffersink_get_frame() failed: Resource temporarily unavailable"
* Android
  - build with NDK r23

ver 0.22.10 (2021/08/06)
* protocol
  - support "albumart" for virtual tracks in CUE sheets
* database
  - simple: fix crash bug
  - simple: fix absolute paths in CUE "as_directory" entries
  - simple: prune CUE entries from database for non-existent songs
* input
  - curl: fix crash bug after stream with Icy metadata was closed by peer
  - tidal: remove defunct unmaintained plugin
* tags
  - fix crash caused by bug in TagBuilder and a few potential reference leaks
* output
  - httpd: fix missing tag after seeking into a new song
  - oss: fix channel order of multi-channel files
* mixer
  - alsa: fix yet more rounding errors

ver 0.22.9 (2021/06/23)
* database
  - simple: load all .mpdignore files of all parent directories
* tags
  - fix "readcomments" and "readpicture" on remote files with ID3 tags
* decoder
  - ffmpeg: support the tags "sort_album", "album-sort", "artist-sort"
  - ffmpeg: fix build failure with FFmpeg 3.4
* Android
  - fix auto-start on boot in Android 8 or later
* Windows
  - fix build failure with SQLite

ver 0.22.8 (2021/05/22)
* fix crash bug in "albumart" command (0.22.7 regression)

ver 0.22.7 (2021/05/19)
* protocol
  - don't use glibc extension to parse time stamps
  - optimize the "albumart" command
* input
  - curl: send user/password in the first request, save one roundtrip
* decoder
  - ffmpeg: fix build problem with FFmpeg 3.4
  - gme: support RSN files
* storage
  - curl: don't use glibc extension
* database
  - simple: fix database corruption bug
* output
  - fix crash when pausing with multiple partitions
  - jack: enable on Windows
  - httpd: send header "Access-Control-Allow-Origin: *"
  - wasapi: add algorithm for finding usable audio format